--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "tsc",
     "prerelease": "yarn build",
     "release": "standard-version",
-    "test": "jest",
+    "test": "mocha -r ts-node/register test/**/*.ts",
     "lint-ts": "eslint --ext .ts ."
   },
   "repository": {
@@ -44,6 +44,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "^4.2.1",
     "jest": "^25.1.0",
+    "mocha": "^7.1.1",
     "prettier": "1.19.1",
     "should": "^13.2.3",
     "standard-version": "7.1.0",
